--- a/frontend/src/Components/DentalHistory/DentalHistory.css
+++ b/frontend/src/Components/DentalHistory/DentalHistory.css
@@ -99,4 +99,10 @@ body {
 }
 
 
+.tooth-no{
+    width: 150px;
+}
 
+.service-name{
+    width: 200px;
+}
